--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 node_modules
 backend-cancer.zip
 submissionmlgc-medica-firebase-adminsdk-twauv-c83e4c3deb.json
+submissionmlgc-danaariska-4a0dace443a3.json
